--- a/CGD200/ASSIGNMENT_1/INDEX.HTML
+++ b/CGD200/ASSIGNMENT_1/INDEX.HTML
@@ -50,7 +50,7 @@
         <h2>Tips and Tricks</h2>
         <p>Whether you are a beginner or an experienced traveler, you should visit the following places at least once in your life.</p>
         <li>
-            <img src="LISBON.jpg" alt="LISBON">
+            <img src="LISBON.JPG" alt="LISBON">
             <span>LISBON</span>
         </li>
         <li>
