--- a/CGD200/ASSIGNMENT_1/INDEX.HTML
+++ b/CGD200/ASSIGNMENT_1/INDEX.HTML
@@ -54,11 +54,11 @@
             <span>LISBON</span>
         </li>
         <li>
-            <img src="PERU.jpg" alt="CUSCO">
+            <img src="PERU.JPG" alt="CUSCO">
             <span>CUSCO</span>
         </li>
         <li>
-            <img src="DUBROVNIK.jpg" alt="DUBROVNIK">
+            <img src="DUBROVNIK.JPG" alt="DUBROVNIK">
             <span>DUBROVNIK</span>
         </li>
     </section>
