--- a/CGD200/ASSIGNMENT_2/INDEX.HTML
+++ b/CGD200/ASSIGNMENT_2/INDEX.HTML
@@ -59,7 +59,7 @@
     </div>
 
     <div class="box">
-        <img src="TRAVEL.jpg" alt="TRAVEL">
+        <img src="TRAVEL.JPG" alt="TRAVEL">
         <p style="font-family: didot; font-size: 27px;" >Embark on a visual journey through my travel photography, where each image encapsulates the spirit of exploration and discovery. From the bustling streets 
             of vibrant cities to the serene landscapes of remote destinations, my lens captures the essence of diverse cultures and breathtaking scenery. With an 
             unwavering passion for documenting the beauty of our world, my travel photography seeks to transport viewers to different corners of the globe. Through a
