--- a/CGD200/ASSIGNMENT_1/INDEX.HTML
+++ b/CGD200/ASSIGNMENT_1/INDEX.HTML
@@ -58,7 +58,7 @@
             <span>CUSCO</span>
         </li>
         <li>
-            <img src="DUBROVNIK.JPG" alt="DUBROVNIK">
+            <img src="DUBROVNIK.jpg" alt="DUBROVNIK">
             <span>DUBROVNIK</span>
         </li>
     </section>
