--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li><a href="CGD200/ASSIGNMENT_1/INDEX.HTML">ASSIGNMENT 1</a></li>
         <li><a href="CGD200/ASSIGNMENT_2/INDEX.HTML">ASSIGNMENT 2</a></li>
-        <li><a href="CGD200/ASSIGNMENT_3/INDEX.HTML-">ASSIGNMENT 3</a></li>
+        <li><a href="CGD200/ASSIGNMENT_3/INDEX.HTML">ASSIGNMENT 3</a></li>
     </ul>
 </body>
 </html>
