--- a/index.html
+++ b/index.html
@@ -3,17 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CGD200-ASSIGNMENTS</title>
-    
+    <link rel="stylesheet" href="styles.css">
+    <title>Assignments</title>
+
 </head>
+<title>Assignments</title>
 <body>
+    
 
-    <h1>CGD 200 ASSIGNMENTS</h1>
+    <div class="assignment-container">
+        <img src="peru.jpg" alt="Assignment 1">
+        <h2>Assignment 1</h2>
+        <p>Topic: Introduce yourself and mention recommended places to visit like local coffee shops,etc.</p>
+    </div>
 
-    <ul>
-        <li><a href="CGD200/ASSIGNMENT_1/INDEX.HTML">ASSIGNMENT 1</a></li>
-        <li><a href="CGD200/ASSIGNMENT_2/INDEX.HTML">ASSIGNMENT 2</a></li>
-        <li><a href="CGD200/ASSIGNMENT_3/INDEX.HTML">ASSIGNMENT 3</a></li>
-    </ul>
+    <div class="assignment-container">
+        <img src="stills.jpg" alt="Assignment 2">
+        <h2>Assignment 2</h2>
+        <p>If you are done with Assignment 1 and see no room for improvements, create a new webpage. Open topic.</p>
+    </div>
+
+    <div class="assignment-container">
+        <img src="allofusstrangers.jpg" alt="Assignment 3">
+        <h2>Assignment 3</h2>
+        <p>Create a web page with a list of recommended TV shows and/or movies.</p>
+    </div>
 </body>
 </html>
