--- a/index.html
+++ b/index.html
@@ -5,28 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Assignments</title>
-
 </head>
-<title>Assignments</title>
 <body>
-    
+    <a href="#" class="assignment-link">
+        <div class="assignment-container">
+            <img src="peru.jpg" alt="Assignment 1">
+            <h2>Assignment 1</h2>
+            <p>Topic: Introduce yourself and mention recommended places to visit like local coffee shops, countries you've visited, or restaurants you recommend. 
+                <cite>Source: CGD200/ASSIGNMENT_1/INDEX.HTML</cite></p>
+        </div>
+    </a>
 
-    <div class="assignment-container">
-        <img src="peru.jpg" alt="Assignment 1">
-        <h2>Assignment 1</h2>
-        <p>Topic: Introduce yourself and mention recommended places to visit like local coffee shops,etc.</p>
-    </div>
+    <a href="#" class="assignment-link">
+        <div class="assignment-container">
+            <img src="stills.jpg" alt="Assignment 2">
+            <h2>Assignment 2</h2>
+            <p>If you are done with Assignment 1 and see no room for improvements, create a new webpage. Open topic. <cite>Source: Creative Exploration</cite></p>
+        </div>
+    </a>
 
-    <div class="assignment-container">
-        <img src="stills.jpg" alt="Assignment 2">
-        <h2>Assignment 2</h2>
-        <p>If you are done with Assignment 1 and see no room for improvements, create a new webpage. Open topic.</p>
-    </div>
-
-    <div class="assignment-container">
-        <img src="allofusstrangers.jpg" alt="Assignment 3">
-        <h2>Assignment 3</h2>
-        <p>Create a web page with a list of recommended TV shows and/or movies.</p>
-    </div>
+    <a href="#" class="assignment-link">
+        <div class="assignment-container">
+            <img src="allofusstrangers.jpg" alt="Assignment 3">
+            <h2>Assignment 3</h2>
+            <p>Create a web page with a list of recommended TV shows and/or movies. <cite>Source: Pop Culture Trends</cite></p>
+        </div>
+    </a>
 </body>
 </html>
