--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Assignments</title>
 </head>
 <body>
-    <a href="#" class="assignment-link">
+    <a href="CGD200/ASSIGNMENT_1/INDEX.HTM" class="assignment-link">
         <div class="assignment-container">
             <img src="peru.jpg" alt="Assignment 1">
             <h2>Assignment 1</h2>
@@ -16,7 +16,7 @@
         </div>
     </a>
 
-    <a href="#" class="assignment-link">
+    <a href="CGD200/ASSIGNMENT_2/INDEX.HTM" class="assignment-link">
         <div class="assignment-container">
             <img src="stills.jpg" alt="Assignment 2">
             <h2>Assignment 2</h2>
@@ -24,7 +24,7 @@
         </div>
     </a>
 
-    <a href="#" class="assignment-link">
+    <a href="CGD200/ASSIGNMENT_3/INDEX.HTM" class="assignment-link">
         <div class="assignment-container">
             <img src="allofusstrangers.jpg" alt="Assignment 3">
             <h2>Assignment 3</h2>
